// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardNavigation renders the default structure correctly 1`] = `
.c0.nav {
  border-radius: inherit !important;
  margin: inherit !important;
  padding: inherit !important;
}

<div
  className="wizard-navigation"
>
  <div
    className="c0 nav nav-pills"
    onKeyDown={[Function]}
  />
</div>
`;

exports[`WizardNavigation renders with children 1`] = `
.c0.nav {
  border-radius: inherit !important;
  margin: inherit !important;
  padding: inherit !important;
}

<div
  className="wizard-navigation"
>
  <div
    className="c0 nav nav-pills"
    onKeyDown={[Function]}
  >
    <div>
      My Child
    </div>
  </div>
</div>
`;
